Finishing updating Web.AccountController and  views

--- a/source/RockawayWish.Web/Views/Account/RegisterComplete.cshtml
+++ b/source/RockawayWish.Web/Views/Account/RegisterComplete.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Register</h2>
 <hr />
-<h4>Thank you for registering with @Convert.ToString(Model.SiteTitle)!</h4>
+<h4>Thank you for registering with @Convert.ToString(Model.SiteAppSettings.SiteTitle)!</h4>
 <p>1. You have completed the first step. </p>
 <p>2. The next step is to activate your account.</p>
 <p>&nbsp;</p>
