--- a/source/RockawayWish.Web/Views/Home/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
+﻿@model InteractiveMembership.Core.ViewModels.HomeVM
 
-<h2>Welcome to Rockaway Wish</h2>
+<h2>Welcome to @Model.SiteAppSettings.SiteTitle</h2>
 
