--- a/source/RockawayWish.Web/Views/Account/Activate.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Activate.cshtml
@@ -1,4 +1,4 @@
-﻿@using InteractiveMembership.Core.Constants;
+﻿@using InteractiveMembership.Core.Constants.EndPointSettings;
 @model InteractiveMembership.Core.ViewModels.ActivateVM
 @{
     ViewBag.Title = "Activate your account";
@@ -10,11 +10,11 @@
 {
     <h4>We're sorry.</h4>
     <p>@Model.Message</p>
-    <p>Please take a minute to tell us about your experience with us.  <a href="@Url.Content(new AppSettingsConfig().SiteAppSettings.ContactUsUrl)">Click here to contact us</a></p>
+    <p>Please take a minute to tell us about your experience with us.  <a href="@Model.SiteAppSettings.ContactUsUrl)">Click here to contact us</a></p>
 }
 else
 {
     <h4>@Convert.ToString(Model.Message)</h4>
-    <p><a href="@Url.Content("~/users/sign/in")">Click here to sign in</a></p>
+    <p><a href="@Url.Content(string.Format("~/{0}", SiteEndPointsConfig.Login))">Click here to sign in</a></p>
 }
 
