--- a/source/RockawayWish.Web/Views/Home/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
 ﻿@model InteractiveMembership.Core.ViewModels.HomeVM
 
-<h2>Welcome to @Model.SiteAppSettings.SiteTitle</h2>
+<h2>Welcome to @Convert.ToString(Model.SiteAppSettings.SiteTitle)</h2>
 
