Updated home page with bootstrap

--- a/source/RockawayWish.Web/Views/Home/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Index.cshtml
@@ -1,4 +1,3 @@
 ﻿@model InteractiveMembership.Core.ViewModels.HomeVM
 
-<h2>Welcome to @Convert.ToString(Model.SiteAppSettings.SiteTitle)</h2>
-
+@Html.Partial("_Carousel")
