--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -1,44 +1,88 @@
-﻿@using InteractiveMembership.Core.Constants;
-@{ 
+﻿
+
+@using InteractiveMembership.Core.Constants;
+@{
     string siteTitle = new AppSettingsConfig().SiteAppSettings.SiteTitle;
 }
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.8.3.js"></script>
+    <meta charset="utf-8">
+
+    <!-- Enable responsive to mobile devices -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Welcome to Wish of Rockaway</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+    <style type="text/css">
+        .site-pink {
+            background-color: hotpink !important;
+        }
+
+        .button-donate {
+            background-color: deeppink !important;
+            color: white !important;
+        }
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: hotpink !important;
+            color: #000;
+            text-align: center;
+            padding-top: 10px;
+            /*border-top: 1px solid #000;*/
+        }
+    </style>
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink(siteTitle, "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
-            </div>
-        </div>
+
+
+    <!-- Top Navigation bar -->
+    <nav class="navbar navbar-dark site-pink sticky-top">
+
+        <!-- Site brand-->
+        <img src="@Url.Content("~/Content/img/white-star.png")" alt="Logo" style="width:50px; margin-right: 10px;" />
+        <a class="navbar-brand" href="#">Wish of Rockaway</a>
+
+
+        <!-- Navbar links -->
+        <ul class="nav nav-pills ml-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><span class="navbar-toggler-icon"></span></a>
+                <div class="dropdown-menu" style="background-color: lightpink">
+                    <a class="dropdown-item " href="#">Sign In</a>
+                    <a class="dropdown-item" href="#">About WISH</a>
+                    <a class="dropdown-item" href="#">Contact WISH</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active button-donate" href="#">Donate</a>
+            </li>
+        </ul>
+    </nav>
+
+
+    <!-- Main Content -->
+    @RenderBody()
+
+    <!-- Bottom Footer  -->
+    <div class="footer sticky-bottom">
+        <p>Copyright &copy; @DateTime.Now.Year.ToString() - WISH of Rockaway Inc. | All Rights Reserved</p>
     </div>
 
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    <script src="~/Scripts/jquery-3.5.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
