Added partial view to Web

--- a/source/RockawayWish.Web/Views/Home/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Index.cshtml
@@ -1,3 +1,5 @@
-﻿@model InteractiveMembership.Core.ViewModels.HomeVM
+﻿@using RockawayWish.Web.ViewModels;
+@model InteractiveMembership.Core.ViewModels.HomeVM
 
-@Html.Partial("_Carousel")
+<!-- Carousel -->
+@Html.Partial("_Carousel", new CarouselVM())
