--- a/source/RockawayWish.Web/Views/Shared/_Carousel.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Carousel.cshtml
@@ -1,4 +1,5 @@
-﻿<style type="text/css">
+﻿@model RockawayWish.Web.ViewModels.CarouselVM
+<style type="text/css">
     .carousel-inner > .carousel-item {
         height: 90vh;
     }
