--- a/source/RockawayWish.Web/Content/Site.css
+++ b/source/RockawayWish.Web/Content/Site.css
@@ -1,18 +1,20 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿.site-pink {
+    background-color: hotpink !important;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.button-donate {
+    background-color: deeppink !important;
+    color: white !important;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: hotpink !important;
+    color: #000;
+    text-align: center;
+    padding-top: 10px;
+    /*border-top: 1px solid #000;*/
 }
-
