Updated to Web front end

--- a/source/RockawayWish.Web/Views/Home/About.cshtml
+++ b/source/RockawayWish.Web/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="container">
     <div class="text-center">
         <div class="col-sm-12">
-            <h2 class="title-one">About Us</h2>
+            <h1 class="title-one">About Wish</h1>
             <p style="text-align: left;">
                 Rockaway W.I.S.H. (Women Inspired to Support &amp; Help) was formed in 2006, from a simple
                 meeting amongst childhood friends looking to make a difference in the community. Our
@@ -99,3 +99,4 @@
 
     </div>
 
+</div>
