Updates to front end of Web

--- a/source/RockawayWish.Web/Content/Site.css
+++ b/source/RockawayWish.Web/Content/Site.css
@@ -16,5 +16,60 @@
     color: #000;
     text-align: center;
     padding-top: 10px;
-    /*border-top: 1px solid #000;*/
+}
+.page-header {
+    line-height: 1.0;
+    font-size: 22px;
+    background-image: url('/Content/images/pink-star.png');
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    vertical-align: text-top;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px dashed hotpink;
+    padding-bottom: 10px;
+}
+.page-list-item {
+    line-height: 1.0;
+    background-image: url('/Content/images/pink-star.png');
+    background-repeat: no-repeat;
+    padding-left: 40px;
+    vertical-align: text-top;
+    margin-bottom: 20px;
+    border-bottom: 1px dotted hotpink;
+    padding-bottom: 10px;
+}
+.contact-address .social-icons a i {
+    border-radius: 0;
+    height: 30px;
+    line-height: inherit;
+    width: 30px;
+    border-width: 0;
+    transition: all 1s ease 0s;
+    -moz-transition: all 1s ease 0s;
+    -webkit-transition: all 1s ease 0s;
+    -o-transition: all 1s ease 0s;
+    margin-right: 10px
+}
+
+.social-icons i:hover {
+    transform: scale(.9);
+}
+
+.social-icons a {
+    color: #FE99CC;
+    font-size: 20px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    text-align: center;
+    padding: 6px;
+    width: 44px;
+    height: 44px;
+    display: inline-block;
+    margin: 2px;
+}
+
+.social-icons a:hover {
+    color: #fff;
+    border: 1px solid #fff;
 }
