--- a/source/RockawayWish.Web/Views/ContactUs/Complete.cshtml
+++ b/source/RockawayWish.Web/Views/ContactUs/Complete.cshtml
@@ -1,4 +1,4 @@
-﻿@model RockawayWish.Web.ViewModels.ContactUsVM
+﻿@model RockawayWish.Web.ViewModels.ContactUsCompleteVM
 <div class="container">
     <div class="row text-center clearfix">
         <div class="col-sm-8 col-sm-offset-2">
@@ -28,6 +28,7 @@
                     <div id="contact-form-section">
                         <p>Thank you for your submission!</p>
                         <p>You will be hearing from us very shortly.  Be sure to check your email.</p>
+                    </div>
                 </div>
             </div>
         </div>
