--- a/source/RockawayWish.Web/Views/Home/Index.cshtml
+++ b/source/RockawayWish.Web/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using RockawayWish.Web.ViewModels;
-@model InteractiveMembership.Core.ViewModels.HomeVM
+﻿@model RockawayWish.Web.ViewModels.HomeVM
 
 <!-- Carousel -->
-@Html.Partial("_Carousel", new CarouselVM())
+@Html.Partial("_Carousel", Model.Carousel)
