--- a/source/RockawayWish.Web/Views/Shared/_Navigation.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Navigation.cshtml
@@ -6,7 +6,7 @@
 
     <!-- Site brand-->
     <a href="@Url.Content("~/")">
-        <img src="@Url.Content("~/Content/img/white-star.png")" alt="Logo" style="width:50px; margin-right: 10px;" />
+        <img src="@Url.Content("~/Content/images/white-star.png")" alt="Logo" style="width:50px; margin-right: 10px;" />
     </a>
     <a class="navbar-brand" href="@Url.Content("~/")">Wish of Rockaway</a>
 
