--- a/source/RockawayWish.Web/Views/ContactUs/Index.cshtml
+++ b/source/RockawayWish.Web/Views/ContactUs/Index.cshtml
@@ -2,69 +2,53 @@
 @model RockawayWish.Web.ViewModels.ContactUsVM
 
 <div class="container">
-    <div class="row text-center clearfix">
-        <div class="col-sm-8 col-sm-offset-2">
-            <div class="contact-heading">
-                <h2 class="title-one">Contact Us</h2>
-                <h4>If you have any questions, comments, or suggestions for Wish of Rockaway <br />please send us a message and we will get back to you shortly.</h4>
+    <div class="page-header">Contact Us</div>
+    <div class="row">
+        <div class="col-sm-6">
+            <p>If you have any questions, comments, or suggestions for @Model.SiteAppSettings.SiteTitle, please send us a message and we will get back to you shortly.</p>
+            <address>
+                <strong>@Model.SiteAppSettings.SiteTitle</strong>
+                <br />
+                <strong>533 Beach 126th St<br>Belle Harbor, NY 11694</strong>
+                <br />
+                <small>email: info@rockawaywish.org</small>
+            </address>
+            <div class="social-icons">
+                <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
             </div>
         </div>
-    </div>
-    <div class="about-us">
-        <div class="pattern"></div>
-        <div class="row">
-            <div class="row text-center clearfix">
-                <div class="col-sm-6">
-                    <div class="contact-address">
-                        <address><p>WISH of Rockaway </p><strong>533 Beach 126th St<br>Belle Harbor, NY 11694</strong><br><small>email: info@rockawaywish.org</small></address>
-                        <div class="social-icons">
-                            <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
-                            @*<a href="#"><i class="fa fa-google-plus"></i></a>
-                                <a href="#"><i class="fa fa-dribbble"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>*@
-                        </div>
-                    </div>
+        <div class="col-sm-6">
+            @using (Html.BeginForm(new { @class = "contact", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                <div class="form-group">
+                    @*<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">*@
+                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control name-field", @required = "required", @placeholder = "Your Name" })
+                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-sm-6">
-                    <div id="contact-form-section">
-                        <div class="status alert alert-success" style="display: none"></div>
-                        @using (Html.BeginForm(new { @class = "contact", role = "form" }))
-                        {
-                            @Html.AntiForgeryToken()
+                <div class="form-group">
+                    @*<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">*@
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control mail-field", @required = "required", @placeholder = "Your Email" })
+                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @*<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>*@
+                    @Html.TextAreaFor(m => m.Message, new { @class = "form-control", @required = "required", @rows = "8", @placeholder = "Message" })
+                    @Html.ValidationMessageFor(m => m.Message, "", new { @class = "text-danger" })
+                </div>
 
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.MathCaptcha()
+                </div>
 
-                            @*<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">*@
-                            <div class="form-group">
-                                @*<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">*@
-                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control name-field", @required = "required", @placeholder = "Your Name" })
-                                @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                @*<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">*@
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control mail-field", @required = "required", @placeholder = "Your Email" })
-                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                @*<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>*@
-                                @Html.TextAreaFor(m => m.Message, new { @class = "form-control", @required = "required", @rows = "8", @placeholder = "Message" })
-                                @Html.ValidationMessageFor(m => m.Message, "", new { @class = "text-danger" })
-                            </div>
-
-                            <div class="form-group">
-                                @Html.MathCaptcha()
-                            </div>
-
-                            @*@Html.Captcha(3)*@
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Send</button>
-                            </div>
-                            @*</form>*@
-                        }
-                    </div>
-                        </div>
-            </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+            }
         </div>
     </div>
 </div>
