--- a/source/RockawayWish.Web/Views/ContactUs/Complete.cshtml
+++ b/source/RockawayWish.Web/Views/ContactUs/Complete.cshtml
@@ -1,37 +1,33 @@
 ﻿@model RockawayWish.Web.ViewModels.ContactUsCompleteVM
+
 <div class="container">
-    <div class="row text-center clearfix">
-        <div class="col-sm-8 col-sm-offset-2">
-            <div class="contact-heading">
-                <h2 class="title-one">Contact Us</h2>
-                <h4>If you have any questions, comments, or suggestions for Wish of Rockaway <br />please send us a message and we will get back to you shortly.</h4>
+    <div class="page-header">Contact Us</div>
+    <div class="row">
+        <div class="col-sm-6">
+            <p>If you have any questions, comments, or suggestions for @Model.SiteAppSettings.SiteTitle, please send us a message and we will get back to you shortly.</p>
+            <address>
+                <strong>@Model.SiteAppSettings.SiteTitle</strong>
+                <br />
+                <strong>533 Beach 126th St<br>Belle Harbor, NY 11694</strong>
+                <br />
+                <a href="mailto:info@rockawaywish.org">email: info@rockawaywish.org</a>
+            </address>
+            <div>
+                <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank">
+                    <img src="@Url.Content("~/Content/images/facebook-icon.png")" class="social-icon" style="width: 100px;" />
+                </a>
+
+                <a href="https://twitter.com/RockawayWISH" target="_blank">
+                    <img src="@Url.Content("~/Content/images/twitter-icon.png")" class="social-icon" style="width: 100px;" />
+                </a>
             </div>
         </div>
-    </div>
-    <div class="about-us">
-        <div class="pattern"></div>
-        <div class="row">
-            <div class="row text-center clearfix">
-                <div class="col-sm-6">
-                    <div class="contact-address">
-                        <address><p>WISH of Rockaway </p><strong>533 Beach 126th St<br>Belle Harbor, NY 11694</strong><br><small>email: info@rockawaywish.org</small></address>
-                        <div class="social-icons">
-                            <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank"><i class="fa fa-facebook"></i></a>
-                            <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
-                            @*<a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>*@
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div id="contact-form-section">
-                        <p>Thank you for your submission!</p>
-                        <p>You will be hearing from us very shortly.  Be sure to check your email.</p>
-                    </div>
-                </div>
+        <div class="col-sm-6">
+            <div class="alert alert-success">
+                <strong>Thank you for your submission!</strong>
             </div>
+
+            <p>We will reply to you shortly.</p>
         </div>
     </div>
 </div>
-    
