--- a/source/RockawayWish.Web/Views/ContactUs/Index.cshtml
+++ b/source/RockawayWish.Web/Views/ContactUs/Index.cshtml
@@ -13,32 +13,42 @@
                 <br />
                 <small>email: info@rockawaywish.org</small>
             </address>
-            <div class="social-icons">
-                <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com/RockawayWISH" target="_blank"><i class="fa fa-twitter"></i></a>
+            <div>
+                <a href="https://www.facebook.com/Rockaway-WISH-305408352848897" target="_blank">
+                    <img src="@Url.Content("~/Content/images/facebook-icon.png")" class="social-icon" style="width: 100px;"  />
+                </a>
+
+                <a href="https://twitter.com/RockawayWISH" target="_blank">
+                    <img src="@Url.Content("~/Content/images/twitter-icon.png")" class="social-icon"  style="width: 100px;"  />
+                </a>
             </div>
         </div>
         <div class="col-sm-6">
-            @using (Html.BeginForm(new { @class = "contact", role = "form" }))
+            @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+                if (Model.Status == 1)
+                {
+                    <div class="alert alert-danger">
+                        <strong>Warning!</strong> @Model.Message
+                    </div>
+                }
                 <div class="form-group">
                     @*<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">*@
                     @Html.TextBoxFor(m => m.Name, new { @class = "form-control name-field", @required = "required", @placeholder = "Your Name" })
-                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+                    @*@Html.ValidationMessageFor(m => m.Name, "", new { @class = "alert-danger" })*@
                 </div>
                 <div class="form-group">
                     @*<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">*@
                     @Html.TextBoxFor(m => m.Email, new { @class = "form-control mail-field", @required = "required", @placeholder = "Your Email" })
-                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    @*@Html.ValidationMessageFor(m => m.Email, "", new { @class = "alert-danger" })*@
                 </div>
                 <div class="form-group">
                     @*<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>*@
-                    @Html.TextAreaFor(m => m.Message, new { @class = "form-control", @required = "required", @rows = "8", @placeholder = "Message" })
-                    @Html.ValidationMessageFor(m => m.Message, "", new { @class = "text-danger" })
+                    @Html.TextAreaFor(m => m.ContactMessage, new { @class = "form-control", @required = "required", @rows = "8", @placeholder = "Message" })
+                    @*@Html.ValidationMessageFor(m => m.ContactMessage, "", new { @class = "alert-danger" })*@
                 </div>
 
                 <div class="form-group">
