--- a/source/RockawayWish.Web/Views/Account/Register.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Register.cshtml
@@ -1,47 +1,47 @@
-﻿@model InteractiveMembership.Core.ViewModels.RegisterVM
+﻿@using CaptchaMvc.HtmlHelpers
+@using InteractiveMembership.Core.Constants.EndPointSettings;
+@model InteractiveMembership.Core.ViewModels.RegisterVM
 
-<h2>Register</h2>
-
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <hr />
-    <h4>Create a new account</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+    <div class="container">
+        <div class="page-header">Register</div>
+        <p>Already have an account? <a href="@Url.Content(string.Format("~/{0}", SiteEndPointsConfig.Login))">Sign In</a></p>
+        <h5>Please enter your email and password.</h5>
+        <div class="row">
+            <div class="col-sm-12">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    if (Model.Status == 1)
+                    {
+                        <div class="alert alert-danger">
+                            <strong>Warning!</strong> @Model.Message
+                        </div>
+                    }
+                    <div class="form-group">
+                    </div>
+                    <div class="form-group">
+                        <label for="Email">Email address:</label>
+                        <input type="email" name="Email" id="Email" class="form-control" required="required" placeholder="Your Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="ConfirmEmail">Confirm email address:</label>
+                        <input type="email" name="ConfirmEmail" id="Email" class="form-control" required="required" placeholder="Confirm your email">
+                    </div>
+                    <div class="form-group">
+                        <label for="Password">Password:</label>
+                        <input type="password" name="Password" id="Password" class="form-control" required="required" placeholder="Your Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="ConfirmPassword">Confirm Password:</label>
+                        <input type="password" name="ConfirmPassword" id="ConfirmPassword" class="form-control" required="required" placeholder="Confirm your password">
+                    </div>
+                    <div class="form-group">
+                        @Html.MathCaptcha()
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmEmail, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.ConfirmEmail, new { @class = "form-control" })
-        </div>
-    </div>
-    <hr />
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <p>Already have an account? @Html.ActionLink("Sign In", "Login")</p>
-        </div>
-    </div>
-}
