--- a/source/RockawayWish.Web/Views/ContactUs/Index.cshtml
+++ b/source/RockawayWish.Web/Views/ContactUs/Index.cshtml
@@ -36,18 +36,15 @@
                     </div>
                 }
                 <div class="form-group">
-                    @*<input type="text" name="name" class="form-control name-field" required="required" placeholder="Your Name">*@
-                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control name-field", @required = "required", @placeholder = "Your Name" })
+                    <input type="text" name="Name" class="form-control" required="required" placeholder="Your Name">
                     @*@Html.ValidationMessageFor(m => m.Name, "", new { @class = "alert-danger" })*@
                 </div>
                 <div class="form-group">
-                    @*<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Your Email">*@
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control mail-field", @required = "required", @placeholder = "Your Email" })
+                    <input type="email" name="Email" class="form-control" required="required" placeholder="Your Email">
                     @*@Html.ValidationMessageFor(m => m.Email, "", new { @class = "alert-danger" })*@
                 </div>
                 <div class="form-group">
-                    @*<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Message"></textarea>*@
-                    @Html.TextAreaFor(m => m.ContactMessage, new { @class = "form-control", @required = "required", @rows = "8", @placeholder = "Message" })
+                    <textarea name="ContactMessage" id="ContactMessage" required="required" class="form-control" rows="8" placeholder="Message"></textarea>
                     @*@Html.ValidationMessageFor(m => m.ContactMessage, "", new { @class = "alert-danger" })*@
                 </div>
 
