--- a/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
+++ b/source/RockawayWish.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
 
     <!-- Javasccipt Libraries  -->
     @Html.Partial("_JsLibraries")
+
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </body>
 
 </html>
