Finalize Activate in Web

--- a/source/RockawayWish.Web/Views/Account/RegisterComplete.cshtml
+++ b/source/RockawayWish.Web/Views/Account/RegisterComplete.cshtml
@@ -8,12 +8,14 @@
                 <strong>Thank you for registering with @Convert.ToString(Model.SiteAppSettings.SiteTitle)!</strong>
             </div>
             <p>
-                <i class='fas fa-user-check' style='font-size:24px'></i>&nbsp; Congratulations, you have completed the 1st step.
+                <i class="fas fa-user-check" style="font-size:24px"></i>&nbsp; Congratulations, you have completed the 1st step.
             </p>
             <p>
-                <i class='fas fa-user-lock' style='font-size:24px'></i>&nbsp; The next step is to activate your account.
+                <i class="fas fa-user-lock" style="font-size:24px"></i>&nbsp; The next step is to activate your account.
             </p>
-            <p>Please check your email and click on the activation link that was sent to you.</p>
+            <div class="alert alert-success">
+                <i class="far fa-envelope" style="font-size:24px"></i>&nbsp; <strong>Please check your email and click on the activation link that was sent to you.</strong>
+            </div>
         </div>
     </div>
 </div>
