--- a/source/RockawayWish.Web/Views/Account/Activate.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Activate.cshtml
@@ -1,18 +1,34 @@
 ﻿@using InteractiveMembership.Core.Constants.EndPointSettings;
 @model InteractiveMembership.Core.ViewModels.ActivateVM
 
-
-<h2>@ViewBag.Title</h2>
-<hr />
-@if (Model.Status == 1)
-{
-    <h4>We're sorry.</h4>
-    <p>@Model.Message</p>
-    <p>Please take a minute to tell us about your experience with us.  <a href="@Model.SiteAppSettings.ContactUsUrl)">Click here to contact us</a></p>
-}
-else
-{
-    <h4>@Convert.ToString(Model.Message)</h4>
-    <p><a href="@Url.Content(string.Format("~/{0}", SiteEndPointsConfig.Login))">Click here to sign in</a></p>
-}
+<div class="container">
+    <div class="page-header">Register</div>
+    <div class="row">
+        <div class="col-sm-12">
+            @if (Model.Status == 1)
+            {
+                <div class="alert alert-danger">
+                    <strong>We're sorry! We were unable to activate your account.</strong>
+                </div>
+                <p>
+                    <i class='fas fa-user-lock' style='font-size:24px'></i>&nbsp; @Model.Message
+                </p>
+                <p>Please take a minute to tell us about your experience with us.  <a href="@Model.SiteAppSettings.ContactUsUrl)">Click here to contact us</a></p>
+            }
+            else
+            {
+                <div class="alert alert-success">
+                    <strong>Your account has been successfully activated!</strong>
+                </div>
+                <p>
+                    <i class='fas fa-user-check' style='font-size:24px'></i>&nbsp; Congratulations, you have activated your account.
+                </p>
+                <p>
+                    <i class='fas fa-user' style='font-size:24px'></i>&nbsp; The next step is to sign in.
+                    <a href="@Url.Content(string.Format("~/{0}", SiteEndPointsConfig.Login))">Click here to sign in</a>
+                </p>
+            }
+        </div>
+    </div>
+</div>
 
