--- a/source/RockawayWish.Web/Views/Account/Register.cshtml
+++ b/source/RockawayWish.Web/Views/Account/Register.cshtml
@@ -20,19 +20,27 @@
                     <div class="form-group">
                     </div>
                     <div class="form-group">
-                        <label for="Email">Email address:</label>
+                        <label for="FirstName"><strong>First Name:</strong></label>
+                        <input type="text" name="FirstName" id="FirstName" class="form-control" required="required" placeholder="Your Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="LastName"><strong>Last Name:</strong></label>
+                        <input type="text" name="LastName" id="LastName" class="form-control" required="required" placeholder="Your Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="Email"><strong>Email address:</strong></label>
                         <input type="email" name="Email" id="Email" class="form-control" required="required" placeholder="Your Email">
                     </div>
                     <div class="form-group">
-                        <label for="ConfirmEmail">Confirm email address:</label>
+                        <label for="ConfirmEmail"><strong>Confirm email address:</strong></label>
                         <input type="email" name="ConfirmEmail" id="Email" class="form-control" required="required" placeholder="Confirm your email">
                     </div>
                     <div class="form-group">
-                        <label for="Password">Password:</label>
+                        <label for="Password"><strong>Password:</strong></label>
                         <input type="password" name="Password" id="Password" class="form-control" required="required" placeholder="Your Password">
                     </div>
                     <div class="form-group">
-                        <label for="ConfirmPassword">Confirm Password:</label>
+                        <label for="ConfirmPassword"><strong>Confirm Password:</strong></label>
                         <input type="password" name="ConfirmPassword" id="ConfirmPassword" class="form-control" required="required" placeholder="Confirm your password">
                     </div>
                     <div class="form-group">
@@ -42,6 +50,10 @@
                         <button type="submit" class="btn btn-primary">Register</button>
                     </div>
                 }
+                <br />
+                <br />
+                <br />
+                <br />
             </div>
         </div>
     </div>
